--- a/util/EIP-712/Cargo.toml
+++ b/util/EIP-712/Cargo.toml
@@ -17,12 +17,12 @@ serde_json = "1.0"
 ethabi = "6.0"
 keccak-hash = "0.1"
 ethereum-types = "0.4"
+logos = "0.12.0"
 failure = "0.1.7"
 itertools = "0.7"
 lazy_static = "1.1"
 regex = "1.0"
 validator = "0.8"
 validator_derive = "0.8"
-lunarity-lexer = "0.2"
 rustc-hex = "2.0"
 indexmap = "1.0.2"
